--- a/config/home_calendar.yml.sample
+++ b/config/home_calendar.yml.sample
@@ -1,6 +1,6 @@
 default: &default
   enabled: <%= ENV.fetch("HOME_CALENDAR_ENABLED") { false } %>
-  url: <%= ENV.fetch("HOME_CALENDAR_URL") { 'http://localhost:3001/api/v1' } %>
+  url: <%= ENV.fetch("HOME_CALENDAR_URL") { 'http://localhost:3001' } %>
 
 development:
   <<: *default
